--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_screenutil: ^5.9.0
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  google_fonts: ^6.1.0
+  logger: ^2.0.2+1
+  vibration: ^1.8.4
 
 dev_dependencies:
   flutter_test:
